# bf-interpreter

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
asm/: hello_world  hello_world.c  hello_world.ll  hello_world.s
benches/: bench.sh  ir_vm.rs  jit_vm.rs  vm.rs
js/: interpreter.js  vm.js
src/: lexer.rs  lib.rs  main.rs  repl.rs  run_ir.rs  vm.rs
src/lexer/: bytecode.rs  opcode.rs
src/vm/: base.rs  ir.rs  jit.rs
tests/: hello_world_by_jit.rs
