[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dynasm = "2.0.0"
dynasmrt = "2.0.0"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "vm"
harness = false


[[bench]]
name = "ir_vm"
harness = false


[features]
default = []
ir = []
jit = []
no_output = []
